--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -143,6 +143,9 @@ pages:
             Les Jeux Olympiques de la Jeunesse sont un véritable catalyseur de projet et représentent une grande chance d’investir de manière durable et intelligente dans le sport, la formation, la culture et les infrastructures. Ils laisseront un héritage positif pour la ville de Lausanne, le canton de Vaud et le sport en Suisse.
       txt2: |
             L’un des héritages phares du projet Lausanne 2020 est notamment l’accélération de la construction de la résidence d’étudiants VORTEX qui deviendra le Village Olympique le temps des Jeux. Ce bâtiment accueillera 1'200 étudiants universitaires et hôtes académiques et répondra à un besoin exprimé depuis de nombreuses années.
+      webcam2: |
+               Vous pouvez dès à présent voir en direct l'avancée des travaux du Vortex grâce à la webcam. Pour cela, 
+      webcam2link: cliquez ici.
       title2: Héritage sportif
       txt3: |
             Une autre construction qui verra le jour pour les Jeux Olympiques de la Jeunesse est le nouvel Espace Malley, qui abritera plusieurs installations sportives, dont une patinoire (capacité de 9 700 places), et sera à disposition des jeunes athlètes. Ce projet remédie au manque cruel d’infrastructures sportives en Suisse romande.
