--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -143,6 +143,9 @@ pages:
             Die Olympischen Jugendspiele sind ein wahrhaftiger Projektkatalysator und bieten eine grossartige Gelegenheit, um auf langfristige und intelligente Weise in den Sport, die Bildung, die Kultur und die Infrastrukturen zu investieren. Sie werden ein positives Vermächtnis für die Stadt Lausanne, den Kanton Waadt und den Schweizer Sport hinterlassen.
       txt2: |
             Eines der bekanntesten Erben des Projekts Lausanne 2020 ist insbesondere die Beschleunigung des Baus der Studentenresidenz VORTEX, welche während den Spielen zum Olympischen Dorf wird. Dieses Gebäude wird insgesamt 1’200 Studenten und akademische Gäste beherbergen und deckt somit ein Bedürfnis, welches seit vielen Jahren vorhanden war.
+      webcam2: |
+               Verfolgen Sie die Fortschritte der Bauarbeiten des Vortex live, indem Sie die Webcams der Baustelle abrufen.
+      webcam2link: '   Hier klicken'
       title2: Sportliches Erbe
       txt3: |
             Ein weiterer Bau, welcher pünktlich zu den Olympischen Jugendspielen fertig wird ist das neue Espace Malley. Die Multisportstätte wird unter anderem eine neue Eishalle (mit einer Kapazität von 9’700 Plätzen) beinhalten, welche den Athleten im 2020 zur Verfügung stehen wird. Auch dieses Projekt kommt einem jahrelangen Mangel an Sportinfrastrukturen in der Westschweiz entgegen.
