--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -14,8 +14,9 @@ pages:
     title4:
       part1: Lausanne 2020
       part2: Wir sehen uns im Januar 2020
-    title_video: Olympic Day 2017
-    text_video: Mehr Infos
+    title_shop: Auf die Plätze, fertig : SHOPPEN !
+    text_shop: Alle Lausanne 2020 Fan-Artikel sind ab sofort in unserem E-shop erhältlich.
+    link_shop: https://lausanne2020.many-ways.ch/de/
     news:
       title: News
       plus: weiterlesen
