--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -14,10 +14,10 @@ pages:
     title4:
       part1: Lausanne 2020
       part2: Rendez-vous en Janvier 2020
-    title_shop: A vos marques, prêt : SHOPPEZ !
-    text_shop: Tous les produits Lausanne 2020 sont désormais disponible dans notre e–shop.
-    link_shop: https://lausanne2020.many-ways.ch/fr
-    img_shop: /images/home/FR_horizontal.png
+    title_shop: "A vos marques, prêt : SHOPPEZ !"
+    text_shop: "Tous les produits Lausanne 2020 sont désormais disponible dans notre e–shop."
+    link_shop: "https://lausanne2020.many-ways.ch/fr/"
+    img_shop: "/images/home/FR_horizontal.png"
     news:
       title: News
       plus: Lire la suite
