--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -14,9 +14,10 @@ pages:
     title4:
       part1: Lausanne 2020
       part2: Wir sehen uns im Januar 2020
-    title_shop: Auf die Plätze, fertig : SHOPPEN !
-    text_shop: Alle Lausanne 2020 Fan-Artikel sind ab sofort in unserem E–shop erhältlich.
-    link_shop: https://lausanne2020.many-ways.ch/de/
+    title_shop: "Auf die Plätze, fertig : SHOPPEN !"
+    text_shop: "Alle Lausanne 2020 Fan-Artikel sind ab sofort in unserem E–shop erhältlich."
+    link_shop: "https://lausanne2020.many-ways.ch/de/"
+    img_shop:  "/images/home/DE_horizontal.png"
     news:
       title: News
       plus: weiterlesen
