--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -116,7 +116,7 @@ pages:
         link: "https://www.olympic.org/fr/surf-des-neiges"
       skimo:
         text: Ski Alpinisme
-        link: "http://www.ismf-ski.org/"
+        link: "https://www.olympic.org/fr/news/gravir-le-sommet-olympique-tout-ce-que-vous-devez-savoir-sur-le-ski-alpinisme"
     sports_new: Pour la première fois dans l’histoire des Jeux Olympiques, le ski alpinisme fera également partie du programme olympique.
     sports_fin: Découvrez les sites de compétition <b><a href="venues" class="link_site">ici</a></b>
     facts:
