--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -116,7 +116,7 @@ pages:
         link: "https://www.olympic.org/snowboard"
       skimo:
         text: Ski Mountaineering
-        link: "http://www.ismf-ski.org/"
+        link: "https://www.olympic.org/news/climbing-the-olympic-summit-everything-you-need-to-know-about-ski-mountaineering"
     sports_new: For the first time in the history of the Olympic Games, Ski Mountaineering will be part of the Olympic programme !
     sports_fin: Discover the venues <b><a href="venues" class="link_site">here</a></b>
     facts:
