--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ sass:
   sass_dir: _sass
   style: compressed
 
-languages: ["en","fr","de"]
+languages: ["en","fr","de","it"]
 exclude_from_localizations: ["js", "images", "mapdata"] # should incluse css, but there are some issues with excluding not static files: https://github.com/Anthony-Gaudino/jekyll-multiple-languages-plugin/issues/75
 
 contentful:
@@ -80,6 +80,7 @@ page_gen:
       en: 'titreEn'
       fr: 'titre'
       de: 'titreDe'
+      it: 'titreIt'
     dir: 'news'
   - data: 'years'
     template: 'news-archives'
