--- a/_i18n/it.yml
+++ b/_i18n/it.yml
@@ -1,188 +1,187 @@
 meta: 
-  desc: "Lausanne 2020 – les 3ème Jeux Olympiques de la Jeunesse d’hiver ont lieu du 10 au 22 janvier 2020. Les sites de compétition sont : Lausanne, Morges, Vallée de Joux, les Tuffes, Leysin, Villars, les Diablerets et St. Moritz"
+  desc: "Losanna 2020 – i terzi Giochi Olimpici Giovanili invernali si svolgeranno dal 10 al 22 gennaio 2020. Le sedi delle gare sono : Losanna, Morges, Vallée de Joux, les Tuffes, Leysin, Villars, les Diablerets e St. Moritz"
 pages:
   index:
     title1:
-      part1: Lausanne 2020
-      part2: C’est ici que tout commence !
+      part1: Losanna 2020
+      part2: E’ qui che tutto inizia! 
     title2:
-      part1: Lausanne 2020
-      part2: Héritage, Expertise, Innovation
+      part1: Losanna 2020
+      part2: Patrimonio, Esperienza, Innovazione
     title3:
-      part1: Lausanne 2020
-      part2: Culture, Sport, Education
+      part1: Losanna 2020
+      part2: Cultura, Sport, Educazione
     title4:
-      part1: Lausanne 2020
-      part2: Rendez-vous en Janvier 2020
-    title_video: Journée Olympique 2017
-    text_video: En savoir plus
+      part1: Losanna 2020
+      part2: Appuntamento a gennaio 2020 
+    title_video: Giornata Olimpica 2017
+    text_video: Scopri di più 
     news:
-      title: News
-      plus: Lire la suite
-      autres: Plus de news
+      title: News 
+      plus: Continua
+      autres: Tutte le news 
     about:
-      title: A propos
-      texte: Du 10 au 22 janvier 2020, Lausanne accueillera la 3e édition des Jeux Olympiques de la Jeunesse d’hiver. Vingt-six ans après l’obtention de son titre de Capitale Olympique, Lausanne devient Ville Olympique en accueillant le second plus grand événement multisport hivernal après les Jeux Olympiques d’hiver et offre à de jeunes athlètes une expérience olympique inoubliable. La culture, les performances et l’éducation se rencontrent pour former un réel festival du sport!
-      more: En savoir plus
+      title: Chi siamo
+      texte: Dal 10 al 22 gennaio 2020, Losanna accoglierà la terza edizione dei Giochi Olimpici Giovanili invernali. A ventisei anni dall’ottenimento del titolo di Capitale Olimpica, Losanna diventa Città Olimpica accogliendo il secondo più grande avvenimento invernale polisportivo dopo i Giochi Olimpici invernali e offrendo ai giovani atleti un’esperienza olimpica indimenticabile. La cultura, le prestazioni e l’educazione si incontrano dando vita ad una vera celebrazione dello sport!
+      more: Scopri di più
     shop:
-      title: Tous les produits Lausanne 2020 bientôt disponibles!
+      title: Tutti i prodotti Losanna 2020 saranno presto disponibili!
       button: Shop!
     socialwall:
-      title: Social Media Feed
+      title: Social Media Feed 
     newsletter:
-      part1: Faites partie de l’aventure Lausanne 2020 et recevez les dernières nouvelles !
-      part2: Lausanne2020!
-      button: Je m’inscris
-      placeholder: Adresse email
-      thanks: Merci. Votre inscription a bien été prise en compte.
-      oops: Oops! Something went wrong while submitting the form
+      part1: Partecipate all’avventura Losanna 2020 e ricevete le ultime informazioni! 
+      part2: Losanna 2020!
+      button: Mi annuncio
+      placeholder: Indirizzo e-mail 
+      thanks: Grazie. Abbiamo ricevuto la sua iscrizione!
+      oops: Ehm…! Qualcosa non ha funzionato durante la trasmissione del formulario. 
     privacy:
-      text: Politique de confidentialité et conditions d'utilisation
-      link: "https://www.lausanne2020.com/images/home/PrivacyPolicy_FR.pdf"
+      text: Norme di tutela della confidenzialità e termini di utilizzo
+      link: "https://www.lausanne2020.com/images/home/PrivacyPolicy_FR.pdf" 
   news:
-    archive_link: Archive
+    archive_link: Archivio
   jobs:
-    title: Emplois
+    title: Offerte di lavoro 
     texte: |
-            Merci pour l’intérêt que vous portez aux Jeux Olympiques de la Jeunesse Lausanne 2020.
+             Grazie per il suo interesse ai Giochi Olimpici Giovanili Losanna 2020.
     texteEmpty: |
-            Merci pour l’intérêt que vous portez aux Jeux Olympiques de la Jeunesse Lausanne 2020.
-            Aucun poste n’est actuellement à pourvoir au sein du comité d’organisation.
-    from: "Délai de postulation :"
-    readFile: En savoir plus
+            Grazie per il suo interesse ai Giochi Olimpici Giovanili Losanna 2020.
+            Attualmente non ci sono posti disponibili all’interno del comitato d’organizzazione.
+    from: "Limite per l’inoltro della sua offerta:" 
+    readFile: Scopri di più
   about:
-    title1: "Les Jeux Olympiques de la Jeunesse : Concourir, apprendre et partager !"
+    title1: "I Giochi Olimpici Giovanili: Competere, imparare e condividere!"
     texte1: |
-            Les Jeux Olympiques de la Jeunesse sont un événement sportif Olympique international du plus haut niveau pour les athlètes âgés de 15 à 18 ans.
-            
-            Ils associent la performance sportive, la culture et l'éducation dans un réel festival du sport. Ils ont comme objectif d’encourager la jeunesse à adopter et vivre selon les valeurs positives du sport – le respect de l’autre, de soi, de notre environnement, l’amitié entre les peuples et les cultures, l’excellence dans le don de soi – et à en devenir les ambassadeurs à travers le monde.
-            
-            Par leur vocation, les Jeux Olympiques de la Jeunesse veulent être un incubateur d’innovation pour les événements sportifs du futur.
-    more: En apprendre plus
-    title2: L'ambition de Lausanne 2020
-    texte2: |
-            Lausanne 2020, c’est l’ambition de créer un plateforme sportive nouvelle pour la jeunesse en l’impliquant activement dans la préparation et l’organisation de l’événement.
-            Il s’agit d’engager toute la population locale, régionale et même nationale autour d’un événement unique et fédérateur en faveur d’un monde meilleur.
-            Valoriser et responsabiliser la jeunesse en lui permettant de devenir une ambassadrice des valeurs positives du sport, d’acquérir de nouveaux talents et de s’accomplir en devenant les leaders de demain. Ceci en faisant des Jeux Olympiques de la Jeunesse un laboratoire d’innovation; incubateur d’idées pour la jeunesse et en puisant dans l’héritage et les atouts uniques de la Suisse en termes de formation, de culture et d’innovation.
+            I Giochi Olimpici Giovanili sono una manifestazione sportiva Olimpica internazionale al più alto livello per atleti dai 15 ai 18 anni.
 
-            <span class="important-dates">Lausanne 2020 se déroulera du 10 au 22 janvier 2020 !</span>
-    sports_title: Les disciplines sportives
-    sports_texte: "Le programme sportif des 3ème Jeux Olympiques de la Jeunesse d’hiver s’apparente au programme des Jeux Olympiques d’hiver, avec des variations et innovations dans les disciplines proposées par les fédérations internationales. Les sports au programme sont :"
+            Associano prestazioni sportive, cultura ed educazione durante un vero festival dello sport. Hanno l’obbiettivo di incoraggiare la gioventù ad adottare e vivere i valori positivi dello sport – il rispetto dell’altro, di sé stessi, del nostro ambiente, l’amicizia fra i popoli e le culture, l’eccellenza nel dono di sé – e divenirne gli ambasciatori in tutto il mondo.
+           
+            Attraverso la propria vocazione, i Giochi Olimpici Giovanili vogliono essere un esempio portatore d’innovazione per gli eventi sportivi del futuro. 
+    more: Saperne di più 
+    title2: L’ambizione di Losanna
+    texte2: |
+            Losanna 2020 rappresenta l’ambizione di creare una nuova piattaforma sportiva per la gioventù coinvolgendola attivamente alla preparazione e organizzazione dell’evento.
+            Si tratta di implicare tutta la popolazione locale, regionale e addirittura nazionale attorno a un evento unico e che unifica in favore di un mondo migliore.
+            Valorizzare e responsabilizzare i giovani permettendo loro di diventare ambasciatori dei valori positivi dello sport, d’acquisire nuovi talenti e di realizzarsi diventando i leader di domani. Tutto ciò facendo dei Giochi Olimpici Giovanili un laboratorio creativo; incubatore d’idee di giovani per i giovani, attingendo al patrimonio e ai vantaggi unici della Svizzera in termini di formazione, cultura e innovazione.
+            <span class="important-dates"> Losanna 2020 si svolgerà dal 10 al 22 gennaio 2020! </span>
+    sports_title: le discipline sportive
+    sports_texte: "Il programma sportivo della terza edizione dei Giochi Olimpici Giovanili invernali è simile al programma dei Giochi Olimpici invernali, con delle varianti e innovazioni nelle discipline proposte dalle federazioni internazionali. Gli sport in programma sono:"
     sports:
       biathlon:
         text: Biathlon
-        link: "https://www.olympic.org/fr/biathlon"
+        link: "https://www.olympic.org/fr/biathlon" 
       bobsleigh:
-        text: Bobsleigh
+        text: Bob
         link: "https://www.olympic.org/fr/bobsleigh"
-      combine-nordique:
-        text: Combiné nordique
+      combine-nordique: 
+        text: Combinata nordica
         link: "https://www.olympic.org/fr/combine-nordique"
       curling:
         text: Curling
         link: "https://www.olympic.org/fr/curling"
       hockey-sur-glace:
-        text: Hockey sur glace
+        text: Hockey su ghiaccio
         link: "https://www.olympic.org/fr/hockey-sur-glace"
       luge:
-        text: Luge
+        text: Slittino
         link: "https://www.olympic.org/fr/luge"
       patinage-artistique:
-        text: Patinage artistique
+        text: Pattinaggio artistico 
         link: "https://www.olympic.org/fr/patinage-artistique"
       patinage-vitesse:
-        text: Patinage de vitesse
+        text: Pattinaggio di velocità
         link: "https://www.olympic.org/fr/patinage-de-vitesse"
       short-track:
-        text: Patinage de vitesse sur piste courte
+        text: Pattinaggio di velocità su short track
         link: "https://www.olympic.org/fr/patinage-de-vitesse-sur-piste-courte"
       saut-a-ski:
-        text: Saut à ski
+        text: Salto con gli sci
         link: "https://www.olympic.org/fr/saut-a-ski"
       skeleton:
         text: Skeleton
         link: "https://www.olympic.org/fr/skeleton"
       ski-freestyle:
-        text: Ski acrobatique
+        text: Sci acrobatico
         link: "https://www.olympic.org/fr/ski-acrobatique"
       ski-alpin:
-        text: Ski alpin
+        text: Sci alpino
         link: "https://www.olympic.org/fr/ski-alpin"
       ski-de-fond:
-        text: Ski de fond
+        text: Sci di fondo
         link: "https://www.olympic.org/fr/ski-de-fond"
       snowboard:
         text: Snowboard
         link: "https://www.olympic.org/fr/surf-des-neiges"
       skimo:
-        text: Ski Alpinisme
-        link: "https://www.olympic.org/fr/news/gravir-le-sommet-olympique-tout-ce-que-vous-devez-savoir-sur-le-ski-alpinisme"
-    sports_new: Pour la première fois dans l’histoire des Jeux Olympiques, le ski alpinisme fera également partie du programme olympique.
-    sports_fin: Découvrez les sites de compétition <b><a href="venues" class="link_site">ici</a></b>
+        text: Sci alpinismo
+        link: "http://www.ismf-ski.org/"
+    sports_new: Per la prima volta nella storia dei Giochi Olimpici, lo sci alpinismo farà anche parte del programma olimpico. 
+    sports_fin: Scoprite le sedi delle gare<b><a href="venues" class="link_site">ici</a></b>
     facts:
-      title: Lausanne 2020 en chiffres
+      title: Losanna 2020 in cifre
       fact1: 
         number: "1’880" 
-        text: Athlètes entre 15 et 18 ans
+        text: Atleti tra i 15 e 18 anni
       fact2: 
         number: "+70" 
-        text: Nations
+        text: Nazioni
       fact3: 
-        number: "8 sports"
-        text: 16 disciplines et 81 épreuves
+        number: "8 sport"
+        text: 16 discipline e 81 gare
       fact4: 
         number: "+3000"
-        text: Bénévoles
+        text: Volontari
       fact5: 
-        number: EGALITE 
-        text: DES GENRES
-    singleevent: 3 régions – 2 pays – 1 événement unique
+        number: PARITA
+        text: DEI GENERI
+    singleevent: 3 regioni – 2 paesi – 1 singolo evento
     heritage:
-      title1: L'héritage Lausanne 2020
+      title1: L’eredità Losanna 2020
       txt1: |
-            Les Jeux Olympiques de la Jeunesse sont un véritable catalyseur de projet et représentent une grande chance d’investir de manière durable et intelligente dans le sport, la formation, la culture et les infrastructures. Ils laisseront un héritage positif pour la ville de Lausanne, le canton de Vaud et le sport en Suisse.
+            I Giochi Olimpici Giovanili sono un vero catalizzatore di progetti e rappresentano una grande opportunità d’investimento in maniera sostenibile e intelligente nello sport, formazione, cultura e nelle infrastrutture. Lasceranno un’eredità positiva per la città di Losanna, il cantone Vallese e lo sport in Svizzera. 
       txt2: |
-            L’un des héritages phares du projet Lausanne 2020 est notamment l’accélération de la construction de la résidence d’étudiants VORTEX qui deviendra le Village Olympique le temps des Jeux. Ce bâtiment accueillera 1'200 étudiants universitaires et hôtes académiques et répondra à un besoin exprimé depuis de nombreuses années.
+            Una delle eredità principali del progetto Losanna 2020 sarà l’accelerazione della costruzione della residenza per studenti VORTEX, che diventerà Villaggio Olimpico durante il periodo dei Giochi. Questo edificio accoglierà 1'200 studenti universitari e ospiti accademici e risponderà a un bisogno di lunga data.
       webcam2: |
-               Vous pouvez dès à présent voir en direct l'avancée des travaux du Vortex grâce à la webcam. Pour cela, 
-      webcam2link: cliquez ici.
-      title2: Héritage sportif
+               Potete seguire in diretta l’avanzamento dei lavori del Vortex via la webcam, A tale scopo,
+      webcam2link: cliccate qui.
+      title2: Eredità sportiva
       txt3: |
-            Une autre construction qui verra le jour pour les Jeux Olympiques de la Jeunesse est le nouvel Espace Malley, qui abritera plusieurs installations sportives, dont une patinoire (capacité de 9 700 places), et sera à disposition des jeunes athlètes. Ce projet remédie au manque cruel d’infrastructures sportives en Suisse romande.
+            Un’altra costruzione che sarà portata a compimento per i Giochi Olimpici Giovanili sarà il nuovo Espace Malley, che comprenderà varie istallazioni sportive, tra le quali una pista di pattinaggio (con 9'700 posti) e sarà a disposizione dei giovani atleti. Questo progetto rimedierà a una forte mancanza d’infrastrutture sportive nella Svizzera romanda. 
       webcam1: |
-               Vous pouvez visionner l'avancée des travaux de l'Espace Malley en direct, ou revoir l'intégralité des travaux jusqu'à ce jour en accéléré, en allant voir les webcams du chantier. Pour cela, 
-      webcam1link: cliquez ici.
+               Potete seguire in diretta l’avanzamento dei lavori di Espace Malley, o rivedere l’integrità dei lavori eseguiti sino ad oggi in versione accelerata, consultando le webcams del cantiere. A tale scopo,
+      webcam1link: cliccare qui.
       txt4: |
-            Outre ces deux constructions majeures, Lausanne 2020 permet notamment le développement des projets suivants : 
-      list1: ' -	la mise en place de centres de formation pour la relève sportive en Suisse romande ;'
-      list2: ' -	un accord avec le département du Jura français pour l’utilisation des infrastructures sportives gratuitement pendant 20 ans ;'
-      list3: ' -	un soutien à la création d’un nouveau sport dans la région : le Short Track ;'
-      list4: ' -	un apprentissage local spécifique à la gestion du sport et à l’organisation d’événements sportif d’envergure ;'
-      list5: ' -	la promotion d’une nouvelle génération de managers de sport.'
-      list6: ' D’autre part, des projets concrets de promotion de sports d’hiver pour tous sont également en cours.'
-      title3: Héritage éducatif
+            Oltre a queste due importanti costruzioni, Losanna 2020 permette di sviluppare i progetti seguenti: 
+      list1: ' -	la creazione di centri di formazione per i futuri atleti nella Svizzera romanda;
+      list2: ' -	un accordo con il dipartimento del Giura francese per l’utilizzo gratuito di infrastrutture sportive per 20 anni; 
+      list3: ' -	un sostegno alla creazione d’un nuovo sport nella regione: lo Short Track;
+      list4: ' -	un apprendistato locale specifico alla gestione dello sport e all’organizzazione di importanti eventi sportivi;
+      list5: ' -	la promozione d’una nuova generazione di managers dello sport. 
+      list6: ' Inoltre sono anche in corso altri progetti concreti per la promozione di sport invernali per tutti.
+      title3: Eredità educativa
       txt6: |
-            L’héritage éducatif de Lausanne 2020 va se traduire avec le fort partenariat engagé avec l’Université de Lausanne (UNIL), l’Ecole Polytechnique Fédérale (EPFL) et l’Ecole Hôtelière de Lausanne (EHL) par l’identification et la valorisation de compétences déjà existantes et la création de nouvelles au sein de la jeunesse locale.
-            Pour ce faire, il est donné aux jeunes l’opportunité de s’investir et d’avoir des responsabilités dans l’organisation des Jeux Olympiques de la Jeunesse.
-            Ces compétences pourront être réutilisées lors d’organisation de prochains événements sportifs internationaux qui va rejaillir durablement sur la région.
-      txt7: "De plus, cette transmission va s’étendre aux plus jeunes générations grâce aux liens tissés avec les enfants des écoles de la région."
+            L’eredità educativa di Losanna 2020 risulterà dal forte partenariato avviato con l’Università di Losanna (UNIL), la Scuola Politecnica Federale di Losanna (EPFL) e la Scuola Alberghiera di Losanna (EHL) attraverso l’identificazione e la valorizzazione delle competenze già esistenti e la creazione di nuove competenze nella gioventù locale. 
+            Concretamente: dando ai giovani l’opportunità di investirsi e di avere delle responsabilità nell’organizzazione dei Giochi Olimpici Giovanili. 
+            Queste competenze potranno essere riutilizzate per l’organizzazione di futuri e continui avvenimenti sportivi internazionali nella regione.
+      txt7: "Inoltre, questa trasmissione si estenderà alle generazioni più giovani grazie ai contatti creati con le scuole della regione."
   contact:
-    title: Contact
-    form:
+    title: Contatto
+    form
       prenom:
-        title: Prénom
-        placeholder: Entrez votre prénom
+        title: Nome
+        placeholder: Inserisca il suo nome
       nom:
-        title: Nom
-        placeholder: Entrez votre nom
+        title: Cognome
+        placeholder: Inserisca il suo cognome
       email:
-        title: Adresse e-mail
-        placeholder: Entrez votre adresse e-mail
+        title: Indirizzo e-mail
+        placeholder: Inserisca il suo indirizzo e-mail
       message:
-        title: Message
-        placeholder: Ecrivez votre message ici
-      envoyer: Envoyer
-      thanks: Nous vous remercions de votre demande. Nous vous répondrons dans les plus brefs délais !
+        title: Messaggio
+        placeholder: Scriva qui il suo messaggio
+      envoyer: Inviare
+      thanks: La ringraziamo per il suo messaggio. Le risponderemo al più breve!
 footer:
   link:
     tokyo: "https://tokyo2020.jp/fr/"
