--- a/_i18n/it.yml
+++ b/_i18n/it.yml
@@ -59,6 +59,14 @@ pages:
            
             Attraverso la propria vocazione, i Giochi Olimpici Giovanili vogliono essere un esempio portatore d’innovazione per gli eventi sportivi del futuro. 
     more: Saperne di più
+    title2: L’ambizione di Losanna
+    texte2: |
+            Losanna 2020 rappresenta l’ambizione di creare una nuova piattaforma sportiva per la gioventù coinvolgendola attivamente alla preparazione e organizzazione dell’evento.
+            Si tratta di implicare tutta la popolazione locale, regionale e addirittura nazionale attorno a un evento unico e che unifica in favore di un mondo migliore.
+            Valorizzare e responsabilizzare i giovani permettendo loro di diventare ambasciatori dei valori positivi dello sport, d’acquisire nuovi talenti e di realizzarsi diventando i leader di domani. Tutto ciò facendo dei Giochi Olimpici Giovanili un laboratorio creativo; incubatore d’idee di giovani per i giovani, attingendo al patrimonio e ai vantaggi unici della Svizzera in termini di formazione, cultura e innovazione.
+            
+            <span class="important-dates"> Losanna 2020 si svolgerà dal 10 al 22 gennaio 2020! </span>
+    sports_title: le discipline sportive
   contact:
     title: Contatto
     form
