--- a/_i18n/it.yml
+++ b/_i18n/it.yml
@@ -149,6 +149,23 @@ pages:
       title2: Eredità sportiva
       txt3: |
             Un’altra costruzione che sarà portata a compimento per i Giochi Olimpici Giovanili sarà il nuovo Espace Malley, che comprenderà varie istallazioni sportive, tra le quali una pista di pattinaggio (con 9'700 posti) e sarà a disposizione dei giovani atleti. Questo progetto rimedierà a una forte mancanza d’infrastrutture sportive nella Svizzera romanda.
+      webcam1: |
+               Potete seguire in diretta l’avanzamento dei lavori di Espace Malley, o rivedere l’integrità dei lavori eseguiti sino ad oggi in versione accelerata, consultando le webcams del cantiere. A tale scopo,
+      webcam1link: cliccare qui.
+      txt4: |
+            Oltre a queste due importanti costruzioni, Losanna 2020 permette di sviluppare i progetti seguenti: 
+      list1: ' -	la creazione di centri di formazione per i futuri atleti nella Svizzera romanda;
+      list2: ' -	un accordo con il dipartimento del Giura francese per l’utilizzo gratuito di infrastrutture sportive per 20 anni; 
+      list3: ' -	un sostegno alla creazione d’un nuovo sport nella regione: lo Short Track;
+      list4: ' -	un apprendistato locale specifico alla gestione dello sport e all’organizzazione di importanti eventi sportivi;
+      list5: ' -	la promozione d’una nuova generazione di managers dello sport. 
+      list6: ' Inoltre sono anche in corso altri progetti concreti per la promozione di sport invernali per tutti.
+      title3: Eredità educativa
+      txt6: |
+            L’eredità educativa di Losanna 2020 risulterà dal forte partenariato avviato con l’Università di Losanna (UNIL), la Scuola Politecnica Federale di Losanna (EPFL) e la Scuola Alberghiera di Losanna (EHL) attraverso l’identificazione e la valorizzazione delle competenze già esistenti e la creazione di nuove competenze nella gioventù locale. 
+            Concretamente: dando ai giovani l’opportunità di investirsi e di avere delle responsabilità nell’organizzazione dei Giochi Olimpici Giovanili. 
+            Queste competenze potranno essere riutilizzate per l’organizzazione di futuri e continui avvenimenti sportivi internazionali nella regione.
+      txt7: "Inoltre, questa trasmissione si estenderà alle generazioni più giovani grazie ai contatti creati con le scuole della regione."
   contact:
     title: Contatto
     form
