--- a/_data/nav-footer/it.yml
+++ b/_data/nav-footer/it.yml
@@ -1,14 +1,14 @@
-- title: "HomeO"
+- title: "Home"
   path: "/it/"
-- title: "NewsO"
+- title: "News"
   path: "/it/news"
-- title: "WettkampfstättenO"
+- title: "Sedi"
   path: "/it/venues"
-- title: "SportartenO"
+- title: "Sport"
   path: "/it/sports"
-- title: "Über unsO"
+- title: "Chi siamo"
   path: "/it/about"
-- title: "JobsO"
+- title: "Offerte di lavoro"
   path: "/it/jobs"
-- title: "KontaktO"
+- title: "Contatto"
   path: "/it/contact"
