--- a/_data/nav-header/it.yml
+++ b/_data/nav-header/it.yml
@@ -1,10 +1,10 @@
-- title: "AccueilO"
+- title: "Home"
   path: "/it/"
-- title: "NewsO"
+- title: "News"
   path: "/it/news"
-- title: "SitesO"
+- title: "Sedi"
   path: "/it/venues"
-- title: "SportsO"
+- title: "Sport"
   path: "/it/sports"  
-- title: "A proposO"
+- title: "Chi siamo"
   path: "/it/about"
