--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -16,7 +16,7 @@ pages:
       part2: Rendez-vous en Janvier 2020
     title_shop: "A vos marques, prêt : "
     txt_shop: " SHOPPEZ !"
-    text_shop: "Tous les produits Lausanne 2020 sont désormais disponible dans notre e–shop."
+    text_shop: "Tous les produits Lausanne 2020 sont désormais disponibles dans notre e–shop."
     link_shop: "https://lausanne2020.many-ways.ch/fr/"
     img_shop: "/images/home/FR_horizontal.png"
     news:
