--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -16,7 +16,7 @@ pages:
       part2: See you in January 2020
     title_shop: "On your marks, ready : "
     txt_shop: " SHOP !"
-    text_shop: "All the Lausanne 2020 goodies are now avaiable in our e–shop."
+    text_shop: "All the Lausanne 2020 goodies are now available in our e–shop."
     link_shop: "https://lausanne2020.many-ways.ch/en"
     img_shop: "/images/home/EN_horizontal.png"
     news:
