--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -192,3 +192,5 @@ footer:
     beijing: "http://www.beijing2022.cn/fr/"
     buenos: "http://www.buenosaires2018.com/fr/"
     pyeongChang: "https://www.pyeongchang2018.com/fr/index"
+    paris: "http://paris2024.org/fr"
+    losAngeles: "https://www.olympic.org/fr/la-2028"
