--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -190,3 +190,5 @@ footer:
     beijing: "http://www.beijing2022.cn/en/"
     buenos: "http://www.buenosaires2018.com/en/"
     pyeongChang: "https://www.pyeongchang2018.com/en/index"
+    paris: "http://paris2024.org/en"
+    losAngeles: "https://www.olympic.org/la-2028"
