--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -14,8 +14,8 @@ pages:
     title4:
       part1: Lausanne 2020
       part2: See you in January 2020
-    title_shop: "On your marks, ready : "
-    txt_shop: " SHOP !"
+    title_shop: "On your marks, ready: "
+    txt_shop: " SHOP!"
     text_shop: "All the Lausanne 2020 goodies are now available in our e–shop."
     link_shop: "https://lausanne2020.many-ways.ch/en"
     img_shop: "/images/home/EN_horizontal.png"
@@ -25,7 +25,7 @@ pages:
       autres: More news
     about:
       title: About
-      texte: From January 10th to the 22nd 2020, Lausanne welcomes the third edition of the Winter Youth Olympic Games. 26 years after obtaining the title of Olympic Capital, Lausanne will become an Olympic city by hosting the second largest multisport winter event after the Winter Olympics. This event will offer a unique and unforgettable Olympic experience to young athletes. The combination of culture, performance and education will give birth to a genuine celebration of sports!
+      texte: From January 10 to 22 2020, Lausanne will be welcoming the third edition of the Winter Youth Olympic Games. Twenty-six years after obtaining the title of Olympic Capital, Lausanne will become an Olympic city by hosting the second largest multisports winter event after the Olympic Winter Games. This event will offer a unique and unforgettable Olympic experience to young athletes. The combination of culture, performance and education will give rise to a genuine celebration of sports!
       more: More
     shop:
       title: All the Lausanne 2020 goodies available soon!
@@ -33,7 +33,7 @@ pages:
     socialwall:
       title: Social Media Feed
     newsletter:
-      part1: Be part of the Lausanne 2020 adventure and receive the latest news!
+      part1: Be part of the Lausanne 2020 adventure and keep up with the latest news!
       part2: Lausanne2020!
       button: Let’s go
       thanks: Thank you! Your submission has been received!
@@ -56,21 +56,21 @@ pages:
   about:
     title1: "The Youth Olympic Games : Compete, learn and share!"
     texte1: |
-            The Youth Olympic Games are an international Olympic sporting event of the highest level for athletes aged 15 to 18 years old.
+            The Youth Olympic Games are an international Olympic sporting event of the highest level for athletes aged 15 to 18.
             
-            They combine sport performance, culture and education in an authentic celebration of sport with a festive atmosphere. The aim is to encourage youth to adopt and represent the positive values of sport - respect for others, for themselves and for our environment, friendship between people and cultures, excellence in self-giving, and to become sport ambassadors throughout the world.
+            They combine sports performance, culture and education in an authentic celebration of sport with a festive atmosphere. The aim is to encourage young people to adopt and represent the positive values of sport - respect for others, for themselves and for our environment; friendship between people and cultures; and, excellence in self-giving - and to become sports ambassadors throughout the world.
             
             Through its mission, the Youth Olympic Games aspire to be a leading example of innovation for sporting events of the future.
     more: Learn more
-    title2: The ambition of Lausanne 2020
+    title2: The Lausanne 2020 ambition
     texte2: |
-            Lausanne 2020 is the ambition of creating a new sports platform for youth by actively involving them in the event’s preparation and organization.
-            It’s a question of implicating the local, regional and even national populations around a unique and federative happening, that aims for a better world.
-            Valorize and give responsibility to youth by providing them an opportunity to become ambassadors of positive sports’ values, to acquire new talents and to reach self-accomplishment by becoming the tomorrow’s leaders. All this while making the Youth Olympic Games a creative laboratory; incubator of ideas of youth, for youth, while drawing inspiration from Switzerland’s heritage and unique assets in education, culture and innovation.
+            Lausanne 2020 is seeking to create a new sports platform for young people by actively involving them in the preparation and organisation of the event. 
+            This means engaging the local, regional and even national population around a unique, unifying occasion, that seeks to create a better world. 
+            Promoting and giving responsibility to young people by providing them with an opportunity to become ambassadors of positive sports values, acquire new talents and achieve self-accomplishment by becoming the leaders of tomorrow. All this while making the Youth Olympic Games a creative laboratory; an incubator of ideas from young people, for young people, drawing inspiration from Switzerland’s heritage and unique assets in education, culture and innovation.
 
-            <span class="important-dates">Lausanne 2020 will take place from January 10th to 22nd , 2020.</span>
+            <span class="important-dates">The Lausanne 2020 Games will take place from 10 to 22 January 2020.</span>
     sports_title: The sport disciplines
-    sports_texte: "The sports programme of the 3rd edition of the Winter Youth Olympic Games is similar to the programme of the Winter Olympic Games with variations and innovations in the disciplines that are proposed by the International Federations. The sports on the programme are:"
+    sports_texte: "The sports programme of the 3<sup>rd</sup> edition of the Winter Youth Olympic Games is similar to the programme of the Olympic Winter Games with variations and innovations in the disciplines that are proposed by the International Federations. The sports on the programme are:"
     sports:
       biathlon:
         text: Biathlon
@@ -85,7 +85,7 @@ pages:
         text: Curling
         link: "https://www.olympic.org/curling"
       hockey-sur-glace:
-        text: Ice Hockey
+        text: Ice hockey
         link: "https://www.olympic.org/ice-hockey"
       luge:
         text: Luge
@@ -112,21 +112,21 @@ pages:
         text: Alpine skiing
         link: "https://www.olympic.org/alpine-skiing"
       ski-de-fond:
-        text: Cross country skiing
+        text: Cross-country skiing
         link: "https://www.olympic.org/cross-country-skiing"
       snowboard:
         text: Snowboard
         link: "https://www.olympic.org/snowboard"
       skimo:
-        text: Ski Mountaineering
+        text: Ski mountaineering
         link: "https://www.olympic.org/news/climbing-the-olympic-summit-everything-you-need-to-know-about-ski-mountaineering"
-    sports_new: For the first time in the history of the Olympic Games, Ski Mountaineering will be part of the Olympic programme !
+    sports_new: For the first time in the history of the Olympic Games, ski mountaineering will be part of the Olympic programme !
     sports_fin: Discover the venues <b><a href="venues" class="link_site">here</a></b>
     facts:
       title: Lausanne 2020 in numbers
       fact1: 
         number: "1’880" 
-        text: Athletes between 15 and 18 years
+        text: Athletes aged between 15 and 18 years
       fact2: 
         number: "+70" 
         text: Nations
@@ -134,7 +134,7 @@ pages:
         number: "8 sports"
         text: 16 disciplines and 81 events
       fact4: 
-        number: "+3000" 
+        number: "+3,000" 
         text: Volunteers
       fact5: 
         number: GENDER 
