--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -143,12 +143,12 @@ pages:
     heritage:
       title1: Lausanne 2020’s legacy
       txt1: |
-            The Youth Olympic Games is a genuine catalyst of projects and provides a wonderful opportunity to invest sustainably and intelligently in sports, education, culture and infrastructures. It will leave a positive legacy to the city of Lausanne, the canton of Vaud and Swiss sports.
+            The Youth Olympic Games are a genuine catalyst of projects and provide a wonderful opportunity to invest sustainably and intelligently in sport, education, culture and infrastructure. They will leave a positive legacy to the city of Lausanne, the canton of Vaud and Swiss sport generally.
       txt2: |
-            One of the key highlights of Lausanne 2020’s heritage is the accelerated construction of the student accommodation VORTEX, which will house the Olympic Village during the Games. This building will accommodate 1,200 university students and academic guests, answering a longtime community need.
+            One of the key highlights of Lausanne 2020’s heritage is the accelerated construction of the student accommodation VORTEX, which will house the Olympic Village during the Games. This building will subsequently accommodate 1,200 university students and academic guests, meeting a longtime community need.
       webcam2: |
-               You can follow the development of the Vortex live by consulting the webcam of the construction site. To do so,
-      webcam2link: please click here.
+               You can follow the development of the VORTEX live by consulting the construction site webcam. To do so,
+      webcam2link: click here.
       title2: Athletic legacy
       txt3: |
             Another construction project that will see the day for the Youth Olympic Games is Espace Malley, which encompasses several athletic installations, one of which is an ice rink (capacity of 9,700 seats), that will be available to young athletes. This project solves the problem of a genuine lack of sports infrastructures in the French-speaking part of Switzerland.
