--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -149,24 +149,24 @@ pages:
       webcam2: |
                You can follow the development of the VORTEX live by consulting the construction site webcam. To do so,
       webcam2link: click here.
-      title2: Athletic legacy
+      title2: Sporting legacy
       txt3: |
-            Another construction project that will see the day for the Youth Olympic Games is Espace Malley, which encompasses several athletic installations, one of which is an ice rink (capacity of 9,700 seats), that will be available to young athletes. This project solves the problem of a genuine lack of sports infrastructures in the French-speaking part of Switzerland.
+            Another construction project that will become a reality thanks to the Youth Olympic Games is the Espace Malley, which encompasses several sports facilities, one of which is an ice rink (capacity of 9,700 seats), that will be accessible to young athletes. This project solves the problem of a genuine lack of sports infrastructure in the French-speaking part of Switzerland.
       webcam1: |
-               You can follow the development of the Espace Malley live, or watch the integrity of the construction works accelerated until today, by consulting the webcams of the construction site. To do so, 
-      webcam1link: please click here.
+               You can follow the development of the Espace Malley live, or watch a speed-up version of all the construction work so far, by consulting the construction site webcams. To do so, 
+      webcam1link: click here.
       txt4: |
-            Besides these two major constructions, Lausanne 2020 will promote the following projects:  
-      list1: ' -  the creation of training centers for the future athletes of the French-speaking part of Switzerland;'
-      list2: ' -	an agreement with the department of French Jura for free use of athletic infrastructures during 20 years;'
-      list3: ' -	usupport for creating a new regional sport – Short Track;'
-      list4: ' -	local training dedicated to sports management of major events;'
+            Besides these two major construction projects, Lausanne 2020 will support the following projects:  
+      list1: ' -  the creation of training centres for the future athletes from the French-speaking part of Switzerland;'
+      list2: ' -	an agreement with the Department of the French Jura for the free use of sports facilities for 20 years;'
+      list3: ' -	support for creating a new regional discipline – Short Track;'
+      list4: ' -	local training on the sports management of major events;'
       list5: ' -	development of a new generation of sports managers.'
-      list6: ' And last but not least, tangible projects underway to promote winter sports for everyone.'
+      list6: ' And, last but not least, tangible projects underway to promote winter sports for everyone.'
       title3: Educational legacy
       txt6: |
-            Lausanne 2020’s educational legacy will be a combination of several elements. First, there are the strong partnerships with University of Lausanne (UNIL), Federal Polytechnical School of Lausanne (EPFL) and Swiss Hotel Management School in Lausanne (EHL). Second is the identification and the development of local youth’s existing skills. And third is the creation of new expertise within this same population. To make this happen, an opportunity has been given to youth to invest themselves and take on organizational responsibilities in the Youth Olympic Games. These learned skills will be available for organizing future international sports events that will continue to burgeon sustainably in the region.
-      txt7: "And it doesn’t stop here! This transmission will touch younger generations, thanks to connections established with children in local schools."
+            Lausanne 2020’s educational legacy will be a combination of several elements. First, there are the strong partnerships with University of Lausanne (UNIL), the Swiss Federal Institute of Technology Lausanne (EPFL) and Swiss Hotel Management School in Lausanne (EHL). Second is the identification and development of local young people's existing skills. And third is the creation of new expertise within this same population. To make this happen, an opportunity has been given to young people to involve themselves and take on organisational responsibilities in the Youth Olympic Games. These learned skills will then be available for organising future international sports events that will continue to grow sustainably within the region.
+      txt7: "And it doesn’t stop here! This legacy will even reach future generations, thanks to the connections established with children in local schools."
   contact:
     title: Contact
     form:
