--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -60,7 +60,7 @@ pages:
 
             Sie verbinden sportliche Höchstleistungen mit Kultur und Bildung zu einem einzigartigen Sportfest und haben zum Ziel, die Jugend zu ermutigen, die positiven Werte des Sports anzunehmen und zu leben. Dies sind der Respekt gegenüber anderen, sich selbst und unserer Umwelt, die Freundschaft zwischen Völkern und Kulturen und sportliche Höchstleistung. Weiter sollen die Jugendlichen Sportbotschafter in der ganzen Welt werden.
             
-            Die Olympischen Jugendspiele wollen ein führendes Beispiel der Innovation für die Sportanlässe der Zukunft zu sein. 
+            Die Olympischen Jugendspiele sind ein führendes Beispiel der Innovation für die Sportanlässe der Zukunft. 
     more: Mehr dazu
     title2: Die Ambition von Lausanne 2020
     texte2: |
