--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -187,7 +187,7 @@ pages:
       envoyer: Envoyer
       thanks: Nous vous remercions de votre demande. Nous vous répondrons dans les plus brefs délais !
   venues:
-    title: Les sites non-compétition
+    title: Les sites hors compétitions
     subtitle1: Village Olympique de la Jeunesse
     text1: Avant de devenir une résidence estudiantine dès la rentrée 2020, le Vortex accueillera, en janvier de la même année, les athlètes et comités nationaux olympiques des Jeux Olympiques de la Jeunesse Lausanne 2020. Ce bâtiment en ellipse est situé au cœur du campus de l'Université de Lausanne, partenaire institutionnel de Lausanne 2020.
     link1: https://www.cpev.ch/immobilier/vortex
