--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -14,9 +14,9 @@ pages:
     title4:
       part1: Lausanne 2020
       part2: Rendez-vous en Janvier 2020
-    title_shop: "A vos marques, prêt : "
-    txt_shop: " SHOPPEZ !"
-    text_shop: "Tous les produits Lausanne 2020 sont désormais disponibles dans notre e–shop."
+    text_shop: "Tous les produits Lausanne 2020 sont désormais disponibles dans notre "
+    txt_shop: "boutique en ligne"
+    text_shop2: "."
     link_shop: "https://lausanne2020.many-ways.ch/fr/"
     img_shop: "/images/home/FR_horizontal.png"
     news:
